# compression-algorithms

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Harness.cpp  Harness.h  main.cpp
pm-stl/: .gitignore  CMakeLists.txt  LICENSE  README.md  pm.cpp  pm_include.h  test.cpp
pm-stl/clock/: CMakeLists.txt  clock_example.cpp  tracer.cpp  tracer.h
pm-stl/coord/: CMakeLists.txt
prezentacja/: presentation.tex
src/: CMakeLists.txt  Compressor.h  compression.h
src/bit_vector/: BitVector.cpp  BitVector.h
src/huffman/: BinaryTree.cpp  BinaryTree.h  huffman_coding.cpp  huffman_coding.h
src/lzw/: lzw.cpp  lzw.h
src/rle/: Rle.cpp  Rle.h
